--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18",
+    "react-draggable": "^4.4.6"
   }
 }
